[package]
name = "embassy-stm32f0-examples"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
# Change stm32f091rc to your chip name, if necessary.
# Revise following 'path = "../../embassy/embassy-stm32" to reference your local copy of the embassy source crate
embassy-stm32 = { version = "0.1.0", path = "../../embassy/embassy-stm32", features = [ "defmt", "memory-x", "stm32f091rc", "time-driver-tim2", "unstable-pac", "exti"] }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.0", features = ["paint-stack"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embassy-sync = { version = "0.6.1", path = "../../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.7.0", path = "../../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", path = "../../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["unsafe-assume-single-core"] }
heapless = { version = "0.8", default-features = false }
embassy-futures = "0.1.1"


[profile.release]
debug = 2
# `lto = true` should also work
lto = 'fat'

